--- a/Battle-of-Neighborhoods_ver1.ipynb
+++ b/Battle-of-Neighborhoods_ver1.ipynb
@@ -13,9 +13,9 @@
     "\n",
     "## Introduction: Business Problem \n",
     "\n",
-    "As a traveller I would like to know: \n",
-    "\"What types of restaurants are available in Melbourne and Canberra?\"\n",
-    "Food is one of the most topic for traveler. I would like to investigate whether there is a variety of restaurants available in the 2 cities.\n",
+    "This project will look at opportunity for openning a asian resturant close to the Canberra city centre.\n",
+    "\n",
+    "As a future business owner, potential investor looking for an opportunity to open a Asian resturant close to city centre in cenberra and close to city attraction.\n",
     "\n",
     "# Data Collection \n",
     "\n",
@@ -23,7 +23,8 @@
     "1- https://www.latlong.net/category/cities-14-15.html \n",
     "2- https://Data.gov.au \n",
     "    \n",
-    "    to collect the data for Australian Cities.\n",
+    "    to collect the data for Australian City.\n",
+    "    \n",
     "Note: the data available free of changed and available to public.\n",
     "\n",
     "The data collected contains the locations and their geographic coordinates.\n",
@@ -32,9 +33,9 @@
     "Methodology ¶\n",
     "\n",
     "The data collected for the cities contains the locations and their geographic coordinates.\n",
-    "Based on the open data available on the web, I will focus on the most populated Boroughs in 2 cities. Data from https://data.gov.au and https://www.latlong.net/category/cities-14-15.html websites the National Statistics Office website.\n",
-    "Once I have the location details, I still require data for restaurants. In order to retrieve this information, I am going to use Foursquare API to retrieve location based restaurants in the 2 cities. By using the Folium map library in Python, I will be able to visually display the locations.\n",
-    "And finally, by using K-Means clustering algotritm, I will be grouping the data into 5 clusters and analyze where the majority of these restaurants are located.\n",
+    "Based on the open data available on the web, I will focus on the most populated city. Data from https://data.gov.au and https://www.latlong.net/category/cities-14-15.html websites the National Statistics Office website.\n",
+    "Once I have the location details, I still require data for restaurants. In order to retrieve this information, I am going to use Foursquare API to retrieve location based restaurants in Canberra. By using the Folium map library in Python, I will be able to visually display the locations.\n",
+    "And finally, by using K-Means clustering algotritm, I will be grouping the data into 5 clusters and analyse where the majority of these restaurants are located.\n",
     "\n",
     "\n",
     "\n",
