--- a/Battle-of-Neighborhoods_ver1.ipynb
+++ b/Battle-of-Neighborhoods_ver1.ipynb
@@ -4,24 +4,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Battle of Neighborhoods - Canberra, ACT, Australia & Melbourne, VIC, Australia\n",
+    "# The Battle of Neighborhoods - Canberra, ACT, Australia\n",
     "\n",
     "Table of contents\n",
-    "•\tIntroduction: Business Problem\n",
-    "•\tData Collection\n",
-    "•\tMethodology\n",
+    "•\tIntroduction: \n",
+    "\n",
+    "        •\tBusiness Problem\n",
+    "\n",
+    "        •\tData Collection\n",
+    "\n",
+    "        •\tMethodology\n",
     "\n",
     "## Introduction: Business Problem \n",
     "\n",
-    "This project will look at opportunity for openning a asian resturant close to the Canberra city centre.\n",
+    "    As Canberra growing rapidly and business opportunity present itself an investor would like to know if opening Asian restaurant will be good idea and if yes where is in Canberra center is the best place to open restaurant.\n",
+    "    As a future business owner, potential investor looking for an opportunity to open a Asian restaurant close to city center in Canberra and close to city attraction.\n",
     "\n",
-    "As a future business owner, potential investor looking for an opportunity to open a Asian resturant close to city centre in cenberra and close to city attraction.\n",
+    "  ###   why Canberra\n",
+    "\n",
+    "  \n",
+    "    Canberra is the capital city of Australia. Founded following the federation of the colonies of Australia as the seat of government for the new nation, it is Australia's largest inland city and the eighth-largest city overall. The city is located at the northern end of the Australian Capital Territory; 280 km south-west of Sydney and 660 km north-east of Melbourne. \n",
+    "    On 1 January 1901, federation of the colonies of Australia was achieved. Section 125 of the new Australian Constitution provided that land, situated in New South Wales and at least 160 km from Sydney, would be ceded to the new federal government. Following discussion and exploration of various areas within New South Wales, the Seat of Government Act 1908 was passed in 1908 which specified a capital in the Yass-Canberra region. The land was transferred to the Commonwealth by New South Wales in 1911, creating the Australian Capital Territory, two years prior to the capital city being founded and formally named as Canberra in 1913. \n",
+    "    It is unusual among Australian cities, being an entirely planned city outside of any state, similar to Washington, D.C. in the United States or Brasília in Brazil. Following an international contest for the city's design, a blueprint by American architects Walter Burley Griffin and Marion Mahony Griffin was selected and construction commenced in 1913. The Griffins' plan featured geometric motifs such as circles, hexagons and triangles, and was centred on axes aligned with significant topographical landmarks in the Australian Capital Territory. The city's design was influenced by the garden city movement and incorporates significant areas of natural vegetation. \n",
+    "    As the seat of the government of Australia, Canberra is home to many important institutions of the federal government, national monuments and museums. This includes Parliament House, the official residence of the monarch's representative the Governor-General, the High Court and numerous government departments and agencies. It is also the location of many social and cultural institutions of national significance such as the Australian War Memorial, the Australian National University, the Royal Australian Mint, the Australian Institute of Sport, the National Gallery, the National Museum and the National Library. The city is also home to many important institutions of the Australian Defence Force including the Royal Military College Duntroon and the Australian Defence Force Academy. It also hosts the majority of foreign embassies in Australia as well as regional headquarters of many international organisations, not-for-profit groups, lobbying groups and professional associations. \n",
+    "    As at June 2018 the population of Canberra was 420,960, having grown by 2.2% over the preceding 12 months. As the city has a high proportion of public servants, the Commonwealth Government contributes the largest percentage of gross territory product and is the largest single employer in Canberra, although not the majority employer. Compared to the national averages, the unemployment rate is lower and the average income higher; tertiary education levels are higher, while the population is younger.\n",
+    "    Canberrans are relatively young, highly mobile and well educated. The median age is 35 years and only 12.7% of the population is aged over 65 years. Between 1996 and 2001, 61.9% of the population either moved to or from Canberra, which was the second highest mobility rate of any Australian capital city.[202] As at May 2017, 43% of ACT residents (25–64) had a level of educational attainment equal to at least a bachelor's degree, significantly higher than the national average of 31%.\n",
+    "    Canberra is one of the highest average income in Australia\n",
+    "    So as result make it attractive to investor and myself to do my research on this city.\n",
+    "\n",
     "\n",
     "# Data Collection \n",
     "\n",
-    "In this project, I will be using \n",
-    "1- https://www.latlong.net/category/cities-14-15.html \n",
-    "2- https://Data.gov.au \n",
+    "        Income information \n",
+    "        •\twww.Data.gov.au \n",
+    "        •\thttps://www.abc.net.au/news/2019-12-30/are-you-one-of-the-average-australians-politicians-refer-to/11831700\n",
+    "        •\thttps://en.wikipedia.org/wiki/Median_household_income_in_Australia_and_New_Zealand\n",
+    "        •\tAustralian Bureau of Statistics \n",
+    "        Restaurant location and information \n",
+    "        •\tForsquare API\n",
+    "        •\tData.gov.au\n",
+    "        •\thttps://www.latlong.net/category/cities-14-15.html\n",
+    "        Social behaviors  \n",
+    "        •\twww.Data.gov.au \n",
+    "        •\thttps://www.abc.net.au/news/2019-12-30/are-you-one-of-the-average-australians-politicians-refer-to/11831700\n",
+    "        •\thttps://en.wikipedia.org/wiki/Median_household_income_in_Australia_and_New_Zealand\n",
+    "        •\tAustralian Bureau of Statistics \n",
+    "        •\tNews chanal and newspapers like ABC , Canberra times and anything else I can use \n",
     "    \n",
     "    to collect the data for Australian City.\n",
     "    \n",
@@ -30,17 +58,27 @@
     "The data collected contains the locations and their geographic coordinates.\n",
     "\n",
     "\n",
-    "Methodology ¶\n",
+    "# Methodology ¶\n",
     "\n",
-    "The data collected for the cities contains the locations and their geographic coordinates.\n",
-    "Based on the open data available on the web, I will focus on the most populated city. Data from https://data.gov.au and https://www.latlong.net/category/cities-14-15.html websites the National Statistics Office website.\n",
-    "Once I have the location details, I still require data for restaurants. In order to retrieve this information, I am going to use Foursquare API to retrieve location based restaurants in Canberra. By using the Folium map library in Python, I will be able to visually display the locations.\n",
-    "And finally, by using K-Means clustering algotritm, I will be grouping the data into 5 clusters and analyse where the majority of these restaurants are located.\n",
+    "I'll use the following utilities and K_means method to analyse the data and provide conclusion \n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "a.\tGitHub as a repository to save all result and reports \n",
+    "b.\tFolium library to visualize geographic details of Canberra\n",
+    "a.\tGeocoder to identify the Latitude and longitude for Canberra city center \n",
+    "b.\t Foursquare API to explore the restaurant with the limit as 1000 venue and the radius 1000 meter for Canberra from their given latitude and longitude information. Here is a head of the list Venues name, category, latitude and longitude information from Foursquare API.\n",
+    "d.\tData cleansing\n",
+    "    Step 1 \n",
+    "            In this case I need to identify all the venue in the radius of 1000 meters this list will include all venues from sport center to restaurant. \n",
+    "    Step 2\n",
+    "        Extract all restaurants as any type of restaurant will impact the business in the area and remove any unidentified data.\n",
+    "    Step 3 \n",
+    "        Extract only Asian restaurants total number 12 to be used in my analysis and remove any unidentified data.\n",
+    "    Step 4 \n",
+    "        Drew the map for Canberra and mark all the venue on the map for both option \n",
+    "    Step 5 \n",
+    "        Apply K-Mean methodology (group data and all required process to complete the analysis)  \n",
+    "    Step 6 \n",
+    "        Mix the information from different resources and provide advise.\n"
    ]
   }
  ],
